MerchantValidationEvent's validationURL should use 'completeURL' to resolve document baseURL

https://bugs.webkit.org/show_bug.cgi?id=216530
rdar://problem/69023893

Reviewed by Anne van Kesteren.

This patch is to use completeURL() from Document in MerchantValidationEvent's  validationURL, so it
can be resolved against document baseURL [1]. By leveraging completeURL(), we achieve this
and also align with CSS and HTML URL Parsing standards (i.e. forcing UTF8) and make this future proof.

[1] https://w3c.github.io/merchant-validation/#merchantvalidationevent-constructor

"Let validationURL be the result of URL parsing eventInitDict.validationURL and base."

Additionally, we didn't had the WPT test cases imported, so this PR import them from upstream.

Upstream Hash: https://github.com/web-platform-tests/wpt/commit/adc1ac02e6d8e080508325ab4525bab8d09177a6

> Change:
* Source/WebCore/Modules/paymentrequest/MerchantValidationEvent.cpp:
(MerchantValidationEvent::create):

> WPT Test Cases & Test Expectations:
* LayoutTests/imported/w3c/resources/import-expectations.json:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/w3c-import.log:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/META.yml:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/complete-method.tentative.https.html:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/complete-method.tentative.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/constructor.tentative.http.html:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/constructor.tentative.http-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/constructor.tentative.https.html:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/constructor.tentative.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/onmerchantvalidation-attribute.https.html:
* LayoutTests/imported/w3c/web-platform-tests/merchant-validation/onmerchantvalidation-attribute.https-expected.txt:
* LayoutTests/platform/glib/TestExpectations: Add Platform Specific Expectations
* LayoutTests/platform/mac-wk1/TestExpectations: Ditto

> Remove old imported WPT tests:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/complete-method.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/complete-method.https.html:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/constructor.http-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/constructor.http.html:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/constructor.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/constructor.https.html:
* LayoutTests/imported/w3c/web-platform-tests/payment-request/MerchantValidationEvent/w3c-import.log:

Canonical link: https://commits.webkit.org/273626@main